// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact notes and editing is set to true button message changes to DONE 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <NullStateComponent
    descriptionText="Remember important details about Roger, like favorite food, hobbies they love or something interesting they said."
    headerText="MY NOTES"
    imageSource={
      Object {
        "testUri": "../../../assets/images/myNotes.png",
      }
    }
  />
  <BottomButton
    onPress={[Function]}
    text="ADD PRIVATE NOTES"
  />
</RCTSafeAreaView>
`;

exports[`contact notes icon and prompt are shown if no notes 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <NullStateComponent
    descriptionText="Remember important details about Roger, like favorite food, hobbies they love or something interesting they said."
    headerText="MY NOTES"
    imageSource={
      Object {
        "testUri": "../../../assets/images/myNotes.png",
      }
    }
  />
  <BottomButton
    onPress={[Function]}
    text="ADD PRIVATE NOTES"
  />
</RCTSafeAreaView>
`;

exports[`contact notes icon and prompt are shown if no notes as me 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <NullStateComponent
    descriptionText="Remember important details about your life or spiritual journey, like important milestones, influential people, or things you are learning about God."
    headerText="MY NOTES"
    imageSource={
      Object {
        "testUri": "../../../assets/images/myNotes.png",
      }
    }
  />
  <BottomButton
    onPress={[Function]}
    text="ADD PRIVATE NOTES"
  />
</RCTSafeAreaView>
`;

exports[`contact notes notes are shown 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <NullStateComponent
    descriptionText="Remember important details about Roger, like favorite food, hobbies they love or something interesting they said."
    headerText="MY NOTES"
    imageSource={
      Object {
        "testUri": "../../../assets/images/myNotes.png",
      }
    }
  />
  <BottomButton
    onPress={[Function]}
    text="ADD PRIVATE NOTES"
  />
</RCTSafeAreaView>
`;
